<resources>
    <string name="app_name">voiceQQ</string>
    <!-- Strings related to login -->
    <string name="prompt_qq">QQ</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="qq_length_most_short">QQ帐号长度不能小于%s位</string>
    <string name="qq_password_length_most_short">QQ密码长度不能小于%s位</string>
    <string name="phone">Phone</string>
    <string name="ipad">ipad</string>
    <string name="watch">watch</string>
    <string name="vbase">语音链接</string>
    <string name="action_task_in">时间任务</string>
</resources>